# Text-Grid

./: CMakeLists.txt  a.out  filltextgridfromtextbuffer.cpp  main.cpp  textbuffer.hpp  textgrid.cpp  textgrid.hpp  textgrid_print.cpp  version.hpp.in
TextArea/: CMakeLists.txt
